# NexusResearch

./: .gitignore  CLAUDE.md  LICENSE  PACKAGING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
html/: DESIGN-HANDOFF.md  DESIGN-MANIFEST.json  essay.html  index.html  (+7 more)
server/: .env.example  README.md  alembic.ini  nexus-server.spec  nexus_server_entry.py  pyproject.toml  setup_provider.py
server/alembic/: env.py
server/alembic/versions/: 0001_initial_schema.py
server/app/: __init__.py  main.py
server/app/api/: ai.py  deps.py  essay.py  literature.py  mcp.py  paper.py  provider.py  skill.py  system.py
server/app/core/: config.py  errors.py  logging.py
server/app/db/: base.py  session.py
server/app/db/repositories/: __init__.py  essay_repo.py  literature_repo.py  provider_repo.py
server/app/db/tables/: __init__.py  chat.py  essay.py  literature.py  provider.py
server/app/models/_generated/: __init__.py  models.py
server/app/services/: data_io.py  essay_service.py  literature_service.py  provider_service.py  usage_service.py
server/app/services/ai/: context.py  gateway.py  service.py
server/app/services/latex/: compiler.py
server/app/services/mcp/: manager.py
server/app/services/skills/: executor.py  loader.py  registry.py
server/app/utils/: crypto.py  streaming.py
server/scripts/: build-python.bat  build-python.sh
server/skills/: academic-polish.yaml  citation-formatter.yaml  paper-qa-enhanced.yaml  smart-summary.yaml
(+98 files in other folders)
